# TheGameOfLife

./: CMakeLists.txt  README.md  game.c  game.h  main.c  utilities.c  utilities.h  window.c  window.h
test/: CMakeLists.txt  test_unit.c
